# conway

./: .gitignore  Cargo.toml  README.md  bench_1024_16.txt  bench_results.txt  todo  vm_experiments.sh
archived/: ca_trait.rs  codegen.rs  shader.rs  shader_compute.wgsl
benches/: bench.rs  main_bench.rs
experiments/: main.cpp  main.ipynb  main.py  notes.txt  pattern_matching.ipynb
gol_engines/: Cargo.toml  README.md  hash_quality.ipynb  notes.txt  todo
gol_engines/src/: config.rs  lib.rs  pattern.rs  topology.rs  traits.rs
gol_engines/src/quadtree/: chunk_vec.rs  hashlife.rs  memory.rs  mod.rs  node.rs  population.rs  streamlife.rs
gol_engines/src/quadtree_async/: blank.rs  chunk_vec.rs  chunk_vec_old.rs  fixed_vec.rs  hashlife.rs  memory.rs  mod.rs  node.rs  population.rs  sharded_counter.rs  statistics.rs  streamlife.rs
gol_engines/src/quadtree_small/: chunk_vec.rs  hashlife.rs  memory.rs  mod.rs  node.rs  streamlife.rs
gol_engines/src/quadtree_sync/: blank.rs  hashlife.rs  memory.rs  mod.rs  node.rs  streamlife.rs
gol_engines/src/simd/: engine.rs  mod.rs
gol_engines/src/utils/: format_int.rs  mod.rs  parse_rle.rs  topology.rs  traits.rs
gol_engines/tests/: test_engines.rs
lifelib/: leaf_iterators.h  lifetree.h  lifetree_abstract.h  main.cpp  pattern2.h  streamlife.h
lifelib/hashtrees/: hypertree.h  kivtable.h  nicearray.h  numtheory.h
res/: otca_0.rle  otca_1.rle
src/: app.rs  compute.wgsl  draw.rs  engine.rs  field_source.rs  fps_limit.rs  grid0.rs  grid1.rs  grid2.rs  grid3.rs  grid4.rs  grid_common.rs  hash_256.rs  lib.rs  life_fast.rs  life_fast_stable.rs  life_fast_unstable.rs  life_hash.rs  life_naive.rs  life_shader.rs  life_simd.rs  life_simd1.rs  life_simd2.rs  main.rs  otca.rs  parse_rle.rs  test_hash_256.rs  trait_grid.rs
src/app/: app.rs
src/engine/: empty_hasher.rs  engine.rs  hashlife.rs  mod.rs  parsing_rle.rs  tests.rs
src/gui/: app.rs  brightness.rs  config.rs  draw.rs  fps_limit.rs  mod.rs  navigation.rs
src/hashlife/: engine.rs  memory.rs  mod.rs  node.rs  population.rs  tests.rs
src/lifes/: ca_trait.rs  hash.rs  hash_256x256.rs  hash_4x4.rs  mod.rs  naive.rs  shader.rs  simd1.rs  simd2.rs
src/pattern_oblivious/: engine.rs  mod.rs
src/quadtree/: chunk_vec.rs  deque.rs  hashlife.rs  memory.rs  mod.rs  node.rs  population.rs  streamlife.rs
src/simd/: engine.rs
src/utils/: brightness.rs  config.rs  format_int.rs  fps_limit.rs  mod.rs  parse_rle.rs  topology.rs  traits.rs
tests/: engines.rs  main_test.rs  test_engines.rs  test_hash_256.rs
(+7 files in other folders)
