[package]
name = "conway"
version = "0.0.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
bytemuck = { version = "1.14", features = ["derive"] }
eframe = "0.24"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "main_bench"
harness = false
