[package]
name = "conway"
version = "0.0.0"
edition = "2021"
default-run = "conway"

[[bin]]
name = "bench_otca"

[[bin]]
name = "bench_0e0p"

[[bin]]
name = "bench_hashmap"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
eframe = "0.28"
egui_file = "0.18"
# tokio = { version = "1.38", features = ["rt"] }

[profile.release.package.conway]
debug = true

[features]
default = []
