[package]
name = "gol_engines"
version = "0.1.0"
edition = "2021"
description = "Game of Life engines (simd, hashlife, streamlife)"
repository = "https://github.com/das67333/conway"
readme = "README.md"
license = "GPL-3.0"
keywords = ["game-of-life", "simd", "hashlife", "streamlife"]
categories = ["algorithms", "concurrency", "simulation"]

[[bin]]
name = "bench_otca"

[[bin]]
name = "bench_0e0p"

[[bin]]
name = "bench_test"

[dependencies]
rand = "0.9"
rand_chacha = "0.9"
ahash = "0.8"
tokio = { version = "1.44", features = ["full"] }
futures = "0.3"
async-recursion = "1.1.1"

[profile.release]
debug = true
